<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
            <variable
                name="shoeData"
                type="com.example.shoesstore.model.ShoeListData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/indexLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/row_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:strokeColor="@color/lightMediumGray"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/shoe_image"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/image_of_shoe"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/shoe_2"
                    tools:srcCompat="@drawable/shoe_2" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/lobster"
                    android:maxLines="2"
                    android:text="@string/shoe_name"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/shoe_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/shoeName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{shoeData.shoeName}"
                    android:textColor="@color/darker"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/lobster"
                    android:maxLines="2"
                    android:text="@string/shoe_size"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/shoe_image"
                    app:layout_constraintTop_toBottomOf="@+id/shoeName" />

                <TextView
                    android:id="@+id/showSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{shoeData.shoeCompany}"
                    android:textColor="@color/darker"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/shoeName" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/lobster"
                    android:maxLines="2"
                    android:text="@string/description"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/shoe_image"
                    app:layout_constraintTop_toBottomOf="@+id/showSize" />


                <TextView
                    android:id="@+id/shoeDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{shoeData.shoeDescription}"
                    android:textColor="@color/darker"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/showSize" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/lobster"
                    android:maxLines="2"
                    android:text="@string/company"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/shoe_image"
                    app:layout_constraintTop_toBottomOf="@+id/shoeDescription" />

                <TextView
                    android:id="@+id/shoeCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{shoeData.shoeSize}"
                    android:textColor="@color/darker"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/shoeDescription" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/lobster"
                    android:maxLines="2"
                    android:text="@string/price"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/shoe_image"
                    app:layout_constraintTop_toBottomOf="@+id/shoeCompany" />

                <TextView
                    android:id="@+id/shoePrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{shoeData.shoePrice}"
                    android:textColor="@color/darker"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/shoeCompany" />

                <!--  add delete button              -->

                <ImageView
                    android:id="@+id/favButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:clickable="true"
                    android:contentDescription="@string/fav"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.951"
                    app:layout_constraintStart_toEndOf="@+id/shoe_image"
                    app:layout_constraintTop_toBottomOf="@+id/shoePrice"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/ic_favorite_bordered"
                    app:tint="#AB1919"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

